custom style for sidenav hover contrast, resolves #3238

--- a/_sass/_theme/_uswds-theme-custom-styles.scss
+++ b/_sass/_theme/_uswds-theme-custom-styles.scss
@@ -4,3 +4,9 @@
 .background-dark .usa-button-secondary.usa-button:focus {
     color: $color-gray-lightest;
 }
+
+// Fix side nav a:hover text contrast
+
+.usa-sidenav a:hover{
+    color: #005ea2;
+}
